--- a/Nequi/registrer.html
+++ b/Nequi/registrer.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/Nequi/registrer.css">
+  <script async src="https://basicons.xyz/embed.js"> </script>
   <title>Nequi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIccx8LJNvtf7I-2_NzuKc2P_nuoK3zOtCVQ&s" type="image/x-icon">
+  
 
 </head>
 <body>
@@ -21,6 +23,7 @@
 		<div class="datos">
 			<h2>Bienvenido</h2>
 			<h4>Disponible</h4>
+			
 			<h1 id="cantidadDinero"></h1>
 			<div class="boton_div">
 				<button type="button" class="boton" id="detalles">
@@ -30,6 +33,7 @@
 		</div>
 		
 		<main class="main">
+			
 			<div class="opciones">
 				<button id="consignar" aria-label="Consignar" title="Consignar">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M8.502 5c-.257-1.675.04-3.562 1.229-5h7.259c-.522.736-1.768 2.175-1.391 5h-1.154c-.147-1.336.066-2.853.562-4h-4.725c-.666 1.003-.891 2.785-.657 4h-1.123zm10.498-1v20h-14v-20h2.374v.675c0 .732.583 1.325 1.302 1.325h6.647c.721 0 1.304-.593 1.304-1.325v-.675h2.373zm-9 17h-2v1h2v-1zm0-2h-2v1h2v-1zm0-2h-2v1h2v-1zm3 4h-2v1h2v-1zm0-2h-2v1h2v-1zm0-2h-2v1h2v-1zm3 4h-2v1h2v-1zm0-2h-2v1h2v-1zm0-2h-2v1h2v-1zm-6-2h-2v1h2v-1zm3 0h-2v1h2v-1zm3 0h-2v1h2v-1zm1-7h-10v5h10v-5z"/></svg>
@@ -58,6 +62,15 @@
 					<h4 style="color: red;">$25,200</h4>
 				</div>
 			</div>
+			
+			
+			<div class="grid grid-cols-5 grid-rows-5 gap-4">
+			    <div class="row-span-2">1</div>
+			    <div >2</div>
+			    <div class="col-start-2 row-start-2">3</div>
+			</div>
+    
+			
 
 		</main>
 		
@@ -83,9 +96,9 @@
 				</button>
 			</div>
 			<h2>Recargar</h2>
-			<h1>sdfoisdifsdfosddi</h1>
+			<h1></h1>
 		</div>
-		<div class="card esconder" id="ventanaCard">
+		<div class="card " id="ventanaCard">
 			<div style="display: flex; justify-content:right" id="ventanaCerrar">
 				<button class="candado"><i class="fa-solid fa-lock"></i></button>
 				<button id="cerrarTarjetaCard">
@@ -97,17 +110,25 @@
 				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" id="Visa-Logo--Streamline-Logos" height="50" width="50"><desc>Visa Logo Streamline Icon: https://streamlinehq.com</desc><path fill="#FFFF" fill-rule="evenodd" d="M1 8.5h2.698a1 1 0 0 1 0.976 0.783L5.5 13 7 8.5h2l-2.5 7h-2L3 9.5l-2 -1Zm9 0h1.5l-1 7H9l1 -7Zm5.003 0c0.8 0 1.62 0.124 1.954 0.291l-0.236 1.426c-0.303 -0.165 -0.99 -0.31 -1.648 -0.31 -0.658 0 -0.846 0.415 -0.846 0.595 0 0.247 0.333 0.424 0.756 0.648 0.734 0.39 1.738 0.923 1.738 2.217 0 1.502 -1.902 2.133 -2.903 2.133 -0.8 0 -1.778 -0.124 -2.112 -0.291l0.235 -1.426c0.299 0.103 1.123 0.333 1.781 0.333 0.66 0 1.147 -0.333 1.147 -0.618 0 -0.426 -0.422 -0.646 -0.915 -0.903 -0.694 -0.362 -1.529 -0.797 -1.529 -1.985 0 -1.502 1.577 -2.11 2.578 -2.11Zm1.497 7h2l0.343 -1h2.29l0.223 1H23l-1.5 -7h-2l-3 7Zm4.311 -2.502h-1.48l0.936 -2.527 0.544 2.527Z" clip-rule="evenodd" stroke-width="1"></path></svg>
 				<p>2323 3434 4543 3434</p>
 				<h4></h4>
+				<div style="display: flex; justify-content:space-between">
+					<p>08/20</p>
+					<p>245</p>
+				</div>
 			</div>
 		</div>
 		<div class="esconder" id="mas">
 			<div class="masIcon">
-				<button>👋</button>
-				<button>📤</button>
-				<button>🥺</button>
+				<button>
+					<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path d="M19 2c1.654 0 3 1.346 3 3v14c0 1.654-1.346 3-3 3h-14c-1.654 0-3-1.346-3-3v-14c0-1.654 1.346-3 3-3h14zm0-2h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-8 8h-1v-2h1v1h2v1h-1v1h-1v-1zm2 12v-1h-1v1h1zm-1-15v-1h-2v1h1v1h1v-1zm8-1v6h-1v-1h-4v-5h5zm-1 4v-3h-3v3h3zm-14 2h-1v1h2v-1h-1zm0 3h1v1h1v-3h-1v1h-2v2h1v-1zm5 1v2h1v-2h-1zm4-10h-1v3h1v-3zm0 5v-1h-1v1h1zm3-2h1v-1h-1v1zm-10-1h-1v1h1v-1zm2-2v5h-5v-5h5zm-1 1h-3v3h3v-3zm9 5v1h-1v-1h-2v1h-1v-1h-3v-1h-1v1h-1v1h1v2h1v-1h1v2h1v-2h3v1h-2v1h2v1h1v-3h1v1h1v2h1v-1h1v-1h-1v-1h-1v-1h1v-1h-2zm-11 8h1v-1h-1v1zm-2-3h5v5h-5v-5zm1 4h3v-3h-3v3zm12-3v-1h-1v1h1zm0 1h-1v1h-1v-1h-1v-1h1v-1h-2v-1h-1v2h-1v1h-1v3h1v-1h1v-1h2v2h1v-1h1v1h2v-1h1v-1h-2v-1zm-9-3h1v-1h-1v1zm10 2v1h1v1h1v-3h-1v1h-1zm2 4v-1h-1v1h1zm0-8v-1h-1v1h1z"/></svg>
+				</button>
+				<button><i class="bsc-send-message-dm-inbox"></i></button>
+				<button><i class="bsc-adjust-settings-vetical"></i></button>
 			</div>
 		</div>
 		
+	
 	</div>
+
 
 
 	<script src="/Nequi/registrer.js"></script>
