--- a/Nequi/registrer.html
+++ b/Nequi/registrer.html
@@ -156,7 +156,7 @@
 			</div>
 		</div>
 		
-		<div class="recargar " id=ventanaRecargar>
+		<div class=" esconder " id=ventanaRecargar>
 			<div style="display: flex; justify-content:right" id="ventanaCerrar">
 				<button id="cerrar">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
